src2/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_created_date__c</fullName>
        <label>Account created date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>number_of_contacts__c</fullName>
        <label>number_of_contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sum_of_opportunities__c</fullName>
        <label>sum of opportunities</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Ownership_public_annual_revenue</fullName>
        <active>false</active>
        <errorConditionFormula>IF(ISPICKVAL( Ownership , &apos;Public&apos;) ,

ISNULL( AnnualRevenue ) ||  AnnualRevenue &lt; 0,

false)</errorConditionFormula>
        <errorMessage>Annual Revenue must be greater than 0 and ownership must be public</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_AR_not_negative_notexceed_10000</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(AND(AnnualRevenue  &gt; 0 , AnnualRevenue &lt;= 10000)  )</errorConditionFormula>
        <errorMessage>Account Revenue cannot negative and not exceeded 10000</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_account_no_is_numeric</fullName>
        <active>false</active>
        <errorConditionFormula>Not(ISNUMBER(AccountNumber)) 
&amp;&amp; 
NOT(ISBLANK( AccountNumber ))</errorConditionFormula>
        <errorMessage>Account number must be numeric</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validates_the_account_billing_zip</fullName>
        <active>false</active>
        <errorConditionFormula>And(   OR(BillingCountry = &apos;USA&apos;, BillingCountry = &apos;US&apos;),

NOT(  OR( REGEX( BillingPostalCode ,&apos;[0-9]{5}&apos;),

        REGEX( BillingPostalCode ,&apos;[0-9]{3}-[0-9]{2}&apos;)

    )
   )
)</errorConditionFormula>
        <errorMessage>Enter the billing postal code in 00000 or 000-00 format if billing country is usa or us</errorMessage>
    </validationRules>
</CustomObject>